fix addItem Button Position when Player is visible

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
   color: white;
   font-size: 38px;
   font-weight: bold;
-  margin: 10px auto;
+  margin: 10px auto 65px;
   cursor: pointer;
 }
 
